...
        <View
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/callend"
            android:layout_marginEnd="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/circle"
            android:backgroundTint="#857566"
            android:background="@drawable/oval_image"/>
...
