...
        android:textColor="#58432E"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpw"
        android:backgroundTint="#58432E"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="30dp"
...
