...
            android:layout_height="40dp"
            android:src="@drawable/videocall"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/telephone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/telephone"
            android:layout_toLeftOf="@+id/videocall"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
...
